--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@tailwindcss/vite": "^4.0.1",
 		"bcryptjs": "^2.4.3",
 		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.4.1",
@@ -20,7 +21,8 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.13.0",
 		"mongoose": "^8.1.1",
-		"socket.io": "^4.7.4"
+		"socket.io": "^4.7.4",
+		"tailwindcss": "^4.0.1"
 	},
 	"devDependencies": {
 		"nodemon": "^3.0.3"
