--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.13.0",
 		"mongoose": "^8.1.1",
-		"socket.io": "^4.7.4",
-		"tailwindcss": "^4.0.1"
+		"socket.io": "^4.7.4"
 	},
 	"devDependencies": {
-		"nodemon": "^3.0.3"
+		"autoprefixer": "^10.4.20",
+		"nodemon": "^3.0.3",
+		"postcss": "^8.5.1",
+		"tailwindcss": "^4.0.1"
 	}
 }
