--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.20",
+		"daisyui": "^4.12.23",
 		"nodemon": "^3.0.3",
 		"postcss": "^8.5.1",
 		"tailwindcss": "^4.0.1"
